<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" tools:keep="@layout/fragment_delivery_list">
    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.assessment.deliverybaseproject.ui.deliveryList.DeliveryListViewModel"/>
    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshing="@{safeUnbox(viewModel.isLoading)}"
            app:onRefreshListener="@{() -> viewModel.onRefresh()}">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_delivery_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adapter="@{viewModel.getDeliveryListAdapter()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>