<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.assessment.deliverybaseproject.model.Delivery"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

        <ImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="@dimen/image_view_width"
                android:layout_height="@dimen/image_view_height"
                android:contentDescription="@string/cd_profile_image"
                app:imageUrl="@{viewModel.imageUrl}"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_delivery_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:textSize="@dimen/text_large"
                app:text="@{@string/delivery_info(viewModel.description, viewModel.location.address)}"
                app:layout_constraintStart_toEndOf="@id/iv_profile_pic"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>